# ExamenParcial3-RobertoCardenas-MiguelGodoy

./: CMakeLists.txt  README.md
EJERCICIO EN C/: estudiante.c  estudiante.h  main.c  main.h
EJERCICIO EN C++/: estudiante.cpp  estudiante.h  main.cpp  main.h
