cmake_minimum_required(VERSION 3.29)
project(ExamenParcial3_RobertoCardenas_MiguelGodoy C)

set(CMAKE_C_STANDARD 11)

include_directories("EJERCICIO EN C")

add_executable(ExamenParcial3_RobertoCardenas_MiguelGodoy
        "EJERCICIO EN C/estudiante.c"
        "EJERCICIO EN C/estudiante.h"
        "EJERCICIO EN C/main.c"
        "EJERCICIO EN C/main.h")
